# termcalc

./: .gitignore  Cargo.toml  Grammar.ebnf  LICENSE-MIT  ReadMe.md  snapcraft.yaml
.github/workflows/: linux.yml  windows.yml
doc/: Grammar.ebnf  Grammar.txt  Manual.adoc  Manual.md  functions.txt  gen.sh
scripts/: gen-doc.sh  make-deb.sh
scripts/lin/: dirs.sh  mk-man.sh  mk-tarball.sh
src/: bin.rs  doc.rs  shell.rs
src/lib/: ast.rs  func.rs  input.rs  lex.rs  lib.rs  parse.rs  parser.rs  util.rs
wix/: License.rtf  main.wxs
