[package]
name = "termcalc"
version = "0.1.0"
description = "a simple Terminal Calculator"
edition = "2021"

[lib]
name = "tc"
path = "src/lib/lib.rs"

[[bin]]
name = "tc"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
pager-rs = "0.3.0"
strip-ansi-escapes = "0.2.0"

[dev-dependencies]
approx = "0.5.1"
