[package]
name = "termcalc"
version = "0.1.0"
authors = ["Rémi THEBAULT <remi.thebault@gmail.com>"]
license = "Unlicense or MIT"
description = "tc is a simple Terminal Calculator"
homepage = "https://github.com/rtbo/termcalc"
repository = "https://github.com/rtbo/termcalc"
documentation = "https://github.com/rtbo/termcalc"
readme = "ReadMe.md"
keywords = ["calculator", "terminal", "cli"]
categories = ["command-line-utilities", "math", "calculator"]
edition = "2021"

[lib]
name = "tc"
path = "src/lib/lib.rs"

[[bin]]
name = "tc"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
pager-rs = "0.3.0"
strip-ansi-escapes = "0.2.0"

[dev-dependencies]
approx = "0.5.1"
