[package]
name = "termcalc"
version = "1.0.0"
authors = ["Rémi THEBAULT <remi.thebault@gmail.com>"]
license = "MIT"
description = "a simple Terminal Calculator"
homepage = "https://github.com/rtbo/termcalc"
repository = "https://github.com/rtbo/termcalc"
documentation = "https://github.com/rtbo/termcalc"
readme = "ReadMe.md"
keywords = ["calculator", "terminal", "cli"]
categories = ["command-line-utilities", "mathematics"]
edition = "2021"
rust-version = "1.74.0"

[lib]
name = "tc"
path = "src/lib/lib.rs"

[[bin]]
name = "tc"
path = "src/bin.rs"

[dependencies]
arboard = "3.4.0"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
pager-rs = "0.3.0"
strip-ansi-escapes = "0.2.0"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.deb]
section = "math"
assets = [
  ["target/release/tc", "usr/bin/termcalc", "755"],
  ["UNLICENSE", "usr/share/doc/termcalc/", "644"],
  ["LICENSE-MIT", "usr/share/doc/termcalc/", "644"],
  ["target/man/termcalc.1", "usr/share/man/man1/termcalc.1", "644"],
]
